@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{587, 64}, {935, 964}}</string>
+	<string>{{590, 86}, {1050, 1082}}</string>
 </dict>
 </plist>
