@@ -1,3 +1,7 @@
+2007-11-27  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed to not select a candidate while completing nicks.
+
 2007-11-26  Satoshi Nakagawa <artension@gmail.com>
 
 	Changed to append a space for the nickname completion when the first character is '@' and a word to complete is following it.
